MOW-424 hovering arrows overlap PDF fix.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@62545 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -655,8 +655,8 @@ $duration: 0.2s;
     		
     		.previewImage {
     			position: absolute;
-    			left: 104px;
-    			width: 300px;
+    			left: 110px;
+    			width: 280px;
     			height: 360px;
     			
     		}
